--- a/interactive/index.html
+++ b/interactive/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-  <html lang="en">
+<html lang="en">
   <head>
     <title>
       Advent of Code
     </title>
   </head>
   <body>
-    <script src="bundle.js"></script>
-    <div id="main"></div>
+    <h1>Advent of Code</h1>
+    <div id="main" style="border: 1px solid black"></div>
+    <script src="bundle.js"></script>    
   </body>
 </html>
